# internal/generated/models/simple_response.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// SimpleResponse simple response
+//
+// swagger:model simpleResponse
+type SimpleResponse struct {
+
+	// message
+	Message string `json:"message,omitempty"`
+
+	// status
+	Status int64 `json:"status,omitempty"`
+}
+
+// Validate validates this simple response
+func (m *SimpleResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this simple response based on context it is used
+func (m *SimpleResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *SimpleResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *SimpleResponse) UnmarshalBinary(b []byte) error {
+	var res SimpleResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
