# internal/generated/restapi/operations/wallet/deposit_responses.go
@@ -9,16 +9,23 @@ import (
 	"net/http"
 
 	"github.com/go-openapi/runtime"
+
+	"github.com/oke11o/walletsuro/internal/generated/models"
 )
 
 // DepositOKCode is the HTTP code returned for type DepositOK
 const DepositOKCode int = 200
 
-/*DepositOK Success
+/*DepositOK Ok
 
 swagger:response depositOK
 */
 type DepositOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Wallet `json:"body,omitempty"`
 }
 
 // NewDepositOK creates DepositOK with default headers values
@@ -27,34 +34,69 @@ func NewDepositOK() *DepositOK {
 	return &DepositOK{}
 }
 
+// WithPayload adds the payload to the deposit o k response
+func (o *DepositOK) WithPayload(payload *models.Wallet) *DepositOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the deposit o k response
+func (o *DepositOK) SetPayload(payload *models.Wallet) {
+	o.Payload = payload
+}
+
 // WriteResponse to the client
 func (o *DepositOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
 	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
 }
 
-// DepositMethodNotAllowedCode is the HTTP code returned for type DepositMethodNotAllowed
-const DepositMethodNotAllowedCode int = 405
+// DepositInternalServerErrorCode is the HTTP code returned for type DepositInternalServerError
+const DepositInternalServerErrorCode int = 500
 
-/*DepositMethodNotAllowed Invalid input
+/*DepositInternalServerError Invalid input
 
-swagger:response depositMethodNotAllowed
+swagger:response depositInternalServerError
 */
-type DepositMethodNotAllowed struct {
+type DepositInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.SimpleResponse `json:"body,omitempty"`
 }
 
-// NewDepositMethodNotAllowed creates DepositMethodNotAllowed with default headers values
-func NewDepositMethodNotAllowed() *DepositMethodNotAllowed {
+// NewDepositInternalServerError creates DepositInternalServerError with default headers values
+func NewDepositInternalServerError() *DepositInternalServerError {
 
-	return &DepositMethodNotAllowed{}
+	return &DepositInternalServerError{}
+}
+
+// WithPayload adds the payload to the deposit internal server error response
+func (o *DepositInternalServerError) WithPayload(payload *models.SimpleResponse) *DepositInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the deposit internal server error response
+func (o *DepositInternalServerError) SetPayload(payload *models.SimpleResponse) {
+	o.Payload = payload
 }
 
 // WriteResponse to the client
-func (o *DepositMethodNotAllowed) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+func (o *DepositInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(405)
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
 }
